--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.7",
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
